@@ -197,7 +197,8 @@ enum tmcg_openpgp_armor_t
 	TMCG_OPENPGP_ARMOR_MESSAGE_PART_X		= 3,
 	TMCG_OPENPGP_ARMOR_MESSAGE_PART_X_Y		= 4,
 	TMCG_OPENPGP_ARMOR_PRIVATE_KEY_BLOCK	= 5,
-	TMCG_OPENPGP_ARMOR_PUBLIC_KEY_BLOCK		= 6
+	TMCG_OPENPGP_ARMOR_PUBLIC_KEY_BLOCK		= 6,
+	TMCG_OPENPGP_ARMOR_FILE					= 200 // used by OpenPGP test suite
 };
 
 enum tmcg_openpgp_stringtokey_t
